# guidance-intel

./: .gitignore  INDUSTRY_STANDARDS.md  LICENSE  README.md  SYSTEM_OVERVIEW.md  pyproject.toml
docs/: 01-project-overview.md  02-architecture.md  03-data-model.md  04-discovery-specification.md  05-implementation-plan.md  06-testing-strategy.md  07-repository-structure.md  08-competitive-landscape.md  09-generic-discovery.md  10-section-level-coverage.md  11-exclusion-patterns.md  12-enhancement-specification.md  FIXES_APPLIED.md  discovery-spec.md
src/guidance_intel/: __init__.py  classification.py  cli.py  counter.py  dependencies.py  discovery.py  exclusions.py  models.py  parser.py  reporter.py  sections.py
tests/: conftest.py  test_classification.py  test_counter.py  test_dependencies.py  test_discovery.py  test_enhancements_integration.py  test_fix_verification.py  test_integration.py  test_parser.py  test_reporter.py  test_sections.py
tests/fixtures/real_transcripts/: rt-session-001.jsonl  rt-session-002.jsonl
tests/fixtures/repo/: AGENTS.md
tests/fixtures/repo/.agents/skills/test-skill/: SKILL.md  TEST_PLAN.md  VALIDATION_REPORT.md
tests/fixtures/repo/.claude/skills/code-review/: SKILL.md
tests/fixtures/repo/.claude/skills/dead-skill/: SKILL.md
tests/fixtures/repo/.claude/skills/graphify/: SKILL.md
tests/fixtures/repo/.claude/workflows/: feature-dev.yaml
tests/fixtures/repo/docs/: TEST_PLAN.md
tests/fixtures/transcripts/: session-001.jsonl  session-002.jsonl  session-003.jsonl
(+1 files in other folders)
